syntax = "proto3";
package models;

message MatchDayBetBucket {

  fixed32 updated = 1;

  string squad_id = 2;
  string tournament_id = 3;
  string match_day_id = 4;

  repeated MatchBetBucket bets = 5;
}

message MatchBetBucket {

  uint32 match_id = 1;

  repeated Bet bets = 2;
}

message Bet {

  string user_id = 1;

  BetStatus status = 2;

  int32 home_goals = 3;
  int32 away_goals = 4;
}

enum BetStatus {
  VISIBLE = 0;
  HIDDEN = 1;
  MISSING = 2;
}
